--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -44,6 +44,12 @@ h1 {
     box-shadow: 2px 4px 8px rgba(0,0,0,0.1);
 }
 
+.edit-form{
+    max-width: 600px;
+    margin: 30px auto;
+    background-color: #fffdf5;
+}
+
 input[type="text"],
 textarea {
     width: 100%;
