--- a/src/main/resources/templates/memo-edit.html
+++ b/src/main/resources/templates/memo-edit.html
@@ -8,7 +8,7 @@
 <body>
   <h1>메모 수정</h1>
 
-  <form th:action="@{/edit}" method="post">
+  <form class="edit-form" th:action="@{/edit}" method="post">
     <input type="hidden" name="id" th:value="${memo.id}"/>
     <input type="text" name="title" th:value="${memo.title}" required/>
     <br/>
